[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/upgrade_screen.gd" id="1_script"]

[node name="UpgradeScreen" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="SpeedCard" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = "Fire Rate
+10%"

[node name="SpreadCard" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = "Spread
+5%"

[node name="MagnetCard" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="MagnetCard" type="Button" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
text = "Magnet Area
+35%"

[connection signal="pressed" from="Control/HBoxContainer/SpeedCard" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/SpreadCard" to="." method="_on_spread_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/MagnetCard" to="." method="_on_magnet_button_pressed"]
